Reject change window (for users)

--- a/src/TestLoaderApp/Shell.xaml
+++ b/src/TestLoaderApp/Shell.xaml
@@ -6,6 +6,6 @@
         WindowStartupLocation="CenterScreen"
         Width="534"
         Height="170"
-        >
+        ResizeMode="NoResize">
     <loader:LoaderView />
 </Window>
