--- a/src/TimerApp/App.xaml
+++ b/src/TimerApp/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="TimerApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="ShellView.xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+             xmlns:converters="clr-namespace:TimerApp.Converters">
     <Application.Resources>
-         
     </Application.Resources>
 </Application>
