--- a/src/TimerApp/App.xaml
+++ b/src/TimerApp/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="TimerApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-             xmlns:converters="clr-namespace:TimerApp.Converters">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:models="clr-namespace:TimerApp.Infrastructures.Models"
+             StartupUri="Shell/ShellView.xaml">
     <Application.Resources>
     </Application.Resources>
 </Application>
