--- a/src/TimerApp/DisplayTimer/DisplayTimeView.xaml
+++ b/src/TimerApp/DisplayTimer/DisplayTimeView.xaml
@@ -4,16 +4,44 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:displaytimer="clr-namespace:TimerApp.DisplayTimer" xmlns:converters="clr-namespace:TimerApp.Converters"
+             xmlns:displaytimer="clr-namespace:TimerApp.DisplayTimer"
+             xmlns:converters="clr-namespace:TimerApp.Infrastructures.Converters" 
+             xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
              d:DataContext="{d:DesignInstance Type=displaytimer:IDisplaySencondsViewModel, IsDesignTimeCreatable=False}">
     <UserControl.Resources>
         <converters:FromSecondToDisplayFormatConverter x:Key="FromSecondToDisplayFormatConverter" />
+        <TextBox Text="{Binding DisplayTime, UpdateSourceTrigger=PropertyChanged, Mode=OneWay, Converter={StaticResource FromSecondToDisplayFormatConverter}}"
+                 Height="35"
+                 FontSize="16"
+                 HorizontalAlignment="Stretch"
+                 VerticalAlignment="Stretch"
+                 VerticalContentAlignment="Center"
+                 IsReadOnly="True"
+                 x:Key="DefaultContent"/>
+        <ProgressBar HorizontalAlignment="Stretch"
+                     VerticalAlignment="Center"
+                     IsIndeterminate="True"
+                     x:Key="BusyContent"/>
     </UserControl.Resources>
-    <TextBox Text="{Binding DisplayTime, UpdateSourceTrigger=PropertyChanged, Mode=OneWay, Converter={StaticResource FromSecondToDisplayFormatConverter}}"
-             Height="35"
-             FontSize="16"
-             HorizontalAlignment="Stretch"
-             VerticalAlignment="Stretch"
-             VerticalContentAlignment="Center"
-             IsReadOnly="True"/>
+    <UserControl.Style>
+        <Style TargetType="UserControl">
+            <Setter Property="Content" Value="{StaticResource DefaultContent}" />
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding TimerService}" Value="{x:Null}">
+                    <Setter Property="Content" Value="{StaticResource BusyContent}" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </UserControl.Style>
+
+    <b:Interaction.Triggers>
+        <b:EventTrigger EventName="Initialized">
+            <b:InvokeCommandAction Command="{Binding OnActivateViewModelCommand}" />
+        </b:EventTrigger>
+        <b:EventTrigger EventName="Unloaded">
+            <b:InvokeCommandAction Command="{Binding OnDeactivateViewModelCommand}" />
+        </b:EventTrigger>
+    </b:Interaction.Triggers>
+
+    
 </UserControl>
